tests/reference/asr-elemental_01-b58df26.stderr
semantic error: The symbol dtype is not found
   --> tests/../integration_tests/elemental_01.py:153:24
    |
153 |     newshape: i32[1] = empty(1, dtype=int)
    |                        ^^^^^^^^^^^^^^^^^^^ 
